[workspace]
members = [
    "call_one",
    "call_two",  
]

[workspace.package]
version = "0.1.0"
authors = [" Author of both cantracts <@testing>"]
edition = "2021"

[workspace.dependencies]
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }

[workspace.dev-dependencies]
ink_e2e = "4.2.0"

