[package]
name = "call_one"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ink.workspace = true

scale.workspace = true
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
